# mmocap

./: README.md
.svn/: wc.db
branches/stable/1.0.0/: CMakeLists.txt
branches/stable/1.0.0/src/: CMakeLists.txt  humanparttracker.h  humanparttrackerproblem.h  humantrackerproblem.cpp  humantrackerproblem.h  humantrackerprobleminstance.cpp  poseevaluatorscombiner.h
branches/stable/1.0.0/src/algorithms/ann/: annealedpfparallel.cpp  particle.h  psapf.cpp  psapf.h
branches/stable/1.0.0/src/algorithms/cmaes/: cmaes.c  cmaeshumanparttracker.h  cmaeshumantracker.cpp  cmaeshumantracker.h
branches/stable/1.0.0/src/algorithms/condensation/: condensationhumantracker.cpp  condensationhumantracker.h
branches/stable/1.0.0/src/algorithms/de/: de_fitnessfunction.h  deht_fitnessfunction.cpp  dehumanparttracker.cpp
branches/stable/1.0.0/src/algorithms/pso/: pso.cpp  pso.h  psohtprobleminstance.cpp  psohtprobleminstance.h  psohumantracker.cpp  psohumantracker.h
branches/stable/1.0.0/src/evaluators/: countforeg.cpp  countforeg.h  fogvh.h  metaevaluator.cpp  rgcolorhistogram.cpp  stxor.cpp  surf.cpp  surf.h  xor.h  xorgrad.cpp  xorgrad.h
branches/stable/1.0.0/tests/: CMakeLists.txt
branches/stable/1.0.0/utils/: CMakeLists.txt
main/: CMakeLists.txt
main/src/: humanparttracker.cpp  humanparttrackerproblem.cpp  humanparttrackerprobleminstance.cpp  humanparttrackerprobleminstance.h  humantracker.h  humantrackerprobleminstance.h  poseevaluators.h  poseevaluatorscombiner.cpp
main/src/algorithms/ann/: annealedhumantracker.cpp  annealedhumantracker.h  annealedpfparallel.cpp  annealedpfparallel.h  psapf.cpp  psapf.h
main/src/algorithms/cmaes/: cmaeshumanparttracker.h  cmaeshumantracker.h
main/src/algorithms/condensation/: condensationhumantracker.cpp  condensationhumantracker.h
main/src/algorithms/de/: de_d40_mm.cpp  de_d40_mm.h  dehpt_fitnessfunction.h  deht_fitnessfunction.h  dehumanparttracker.cpp  dehumantracker.cpp
main/src/algorithms/pso/: hpsohtprobleminstance.h  psohtprobleminstance.cpp  psohumantracker.cpp  psohumantracker.h
main/src/evaluators/: fogvh.cpp  optflow.h  rgcolorhistogram.cpp  stev.h  stxor.h  stxorcolor.cpp  surf.h  xorcolor.cpp  xorcolor.h  xorgrad.h
main/src/gpu/: gpu_xor.h
main/tests/: example1.c
main/utils/: gummocap_test_humantracker.cpp
